--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="content">
       <p>Je m'appelle Evan et je suis actuellement en première année de BTS SIO, spécialité SLAM au lycée Georges Brassens à Rive de Gier. Passionné par l'informatique depuis toujours, j'aime explorer les dernières technologies et concevoir des solutions innovantes.</p>
       <!-- Vous pouvez ajouter une image de profil par exemple -->
-    <img src="images/profil.jpg" alt="Photo de profil d'Evan" style="max-width: 200px; display: block; margin: 1rem auto;">
+    <img src="images/evan.png" alt="Photo de profil d'Evan" style="max-width: 200px; display: block; margin: 1rem auto;" class="profil-img">
     </div>
   </section>
 
